force-app/main/default/objects/Market__c/fields/Brand_Importance__c.field-meta.xml
<CustomField>
    <fullName>Brand_Importance__c</fullName>
    <label>Brand Importance</label>
    <type>TextArea</type>
</CustomField>