force-app/main/default/objects/Market__c/fields/Challenges_for_j2__c.field-meta.xml
<CustomField>
    <fullName>Challenges_for_j2__c</fullName>
    <label>Challenges for j2</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>