force-app/main/default/objects/Market__c/fields/Compete_Score__c.field-meta.xml
<CustomField>
    <fullName>Compete_Score__c</fullName>
    <description>Compete.com score</description>
    <label>Compete Score</label>
    <type>TextArea</type>
</CustomField>