force-app/main/default/objects/Market__c/fields/Competitive_concentration__c.field-meta.xml
<CustomField>
    <fullName>Competitive_concentration__c</fullName>
    <label>Competitive concentration</label>
    <type>TextArea</type>
</CustomField>