force-app/main/default/objects/Market__c/fields/Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Consolidation__c</fullName>
    <label>Consolidation</label>
    <type>TextArea</type>
</CustomField>