force-app/main/default/objects/Market__c/fields/Description_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Services__c</fullName>
    <label>Description of Services</label>
    <type>TextArea</type>
</CustomField>