force-app/main/default/objects/Market__c/fields/General_ARPU__c.field-meta.xml
<CustomField>
    <fullName>General_ARPU__c</fullName>
    <label>General ARPU</label>
    <type>TextArea</type>
</CustomField>