force-app/main/default/objects/Market__c/fields/Innovation_Pace__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Pace__c</fullName>
    <description>Pace of product/service/tech innovation</description>
    <label>Innovation Pace</label>
    <type>TextArea</type>
</CustomField>