force-app/main/default/objects/Market__c/fields/IP_Landscape__c.field-meta.xml
<CustomField>
    <fullName>IP_Landscape__c</fullName>
    <label>IP Landscape</label>
    <type>TextArea</type>
</CustomField>