force-app/main/default/objects/Market__c/fields/Margins__c.field-meta.xml
<CustomField>
    <fullName>Margins__c</fullName>
    <description>Comments on margins</description>
    <label>Margins</label>
    <type>TextArea</type>
</CustomField>