force-app/main/default/objects/Market__c/fields/Market_History__c.field-meta.xml
<CustomField>
    <fullName>Market_History__c</fullName>
    <label>Market History</label>
    <type>TextArea</type>
</CustomField>