force-app/main/default/objects/Market__c/fields/Market_Size__c.field-meta.xml
<CustomField>
    <fullName>Market_Size__c</fullName>
    <label>Market Size</label>
    <type>TextArea</type>
</CustomField>