force-app/main/default/objects/Market__c/fields/Opportunities_for_j2__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_for_j2__c</fullName>
    <label>Opportunities for j2</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>