force-app/main/default/objects/Market__c/fields/Projected_Growth__c.field-meta.xml
<CustomField>
    <fullName>Projected_Growth__c</fullName>
    <label>Projected Growth</label>
    <type>TextArea</type>
</CustomField>