force-app/main/default/objects/Market__c/fields/Research_URLs__c.field-meta.xml
<CustomField>
    <fullName>Research_URLs__c</fullName>
    <description>Enter URLs used for online research</description>
    <label>Research URLs</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>